assets/scss/main.scss
@use './../../node_modules/hgrid-css/sass/hgrid.scss' with (
  $use-article-link-underlines: true
);

:root {
  --bg: #f6f6f6;
  --bg-darker: #dddbd5;
  --header-bg: #fff;
  --header-shadow: #52525242;
  --font: #000;
  --title: #000;
  --link: #66008d;
  --active-link: #66008d;
  --link-underline: #c788e0;
  --menulink: #333;
  --menutitle: #444;
  --menulink-hover: #000;
  --icon-hover: orangered;
  --transition: #fff;
  --transition-duration: 0.2s;
  --code-bg: #23004b;
  --inline-code-bg: #ffe4c9;
  --border-light-dotted: #ccc;
  --border-light-solid: #ccc;
  --menu-border: #d4d4d4;
  --note-border: #9ccaff;
  --note-bg: #d7eeff;
  --icon-filter: invert(0);
  --focus-border: 0 0 0 0.3rem #3971ffaf;
  --light-bg: #fff;
}

[data-theme="dark"] {
  --bg: #060323;
  --bg-darker: #c5ad88;
  --header-bg: #0b092f;
  --header-shadow: #00000060;
  --font: #e0dbd3;
  --font-light: #fff;
  --title: #cac4bb;
  --link: #ffc9a2;
  --active-link: #d09255;
  --link-underline: #e6c8b3;
  --menulink: #d4c9b9;
  --menutitle: #e9dac5;
  --menulink-hover: #ffffff;
  --icon-hover: #ff9900;
  --transition: var(--bg);
  --transition-duration: 0.2s;
  --code-bg: #21163c;
  --inline-code-bg: #391e54;
  --border-light-dotted: #2c3868;
  --border-light-solid: #222b4e;
  --menu-border: #171244;
  --note-border: #31278f;
  --note-bg: #130f40;
  --icon-filter: invert(70%);
  --focus-border: 0 0 0 0.3rem #467aff;
  --light-bg: #e8e9f7;
}

body {
  background: var(--bg);
  transition: all var(--transition-duration) ease;
  color: var(--font);
  font-family: "Wotfard";

  &.no-outline button:not(form button):focus,
  &.no-outline a:not(form a):focus,
  &.no-outline label:not(form label):focus,
  &.no-outline input:not(input[type=radio]:checked):not(form input):focus,
  &.no-outline ul li:not(form ul li):focus {
    outline-color: transparent;
    outline-style: none;
    outline-width: 0;
    border-radius: 0;
    box-shadow: none;
  }
}

a,
p a {
  text-decoration: none;
  color: var(--link);
  transition: 0.2s ease-in-out;
}

a.no-underline:hover:before,
nav.sidebar a.no-underline:hover:before, 
.desktop-menu a.no-underline:hover:before {
  height: 0;
}

:focus {
  outline: 0;
  outline-color: transparent;
  outline-style: none;
  outline-width: 0;
  border-radius: 3px;
  box-shadow: var(--focus-border);
}

main.container,
main.container-max {
  min-height: calc(100vh - 341px)
}

.masthead {
  background: #2c004f;
  background: linear-gradient(197deg, #2c004f 0%, #0b0029 100%);
}

.signal {
  color: #f7e0a8;
}

button.outline-l {
  background: none;
  border: 2px solid #fff;
  font-weight: 600;
  padding: 0;
  letter-spacing: 4px;
  transition: all var(--transition-duration) ease;
  a {
    line-height: 7.4rem;
    padding: 0 8rem;
  }
  &:hover,
  &:focus,
  &:active {
    background: #ffffff38;
    border: 2px solid #fff;
    transform: scale(1.08)
  }
}

header {
  background: var(--header-bg);
  box-shadow: 0 0 0.3rem var(--header-shadow);
  transition: all var(--transition-duration) ease;

  .icon {
    width: 19px;
    height: 19px;
    margin-right: 0.8rem;
    position: relative;
    top: -1px;
  }

  .github-icon {
    width: 2.8rem;
    height: 2.8rem;
    filter: var(--icon-filter);
    transition: var(--transition-duration) ease;
  }

  .identity:hover,
  .github-icon:hover {
    opacity: 0.6;
  }
}

header ul li a,
header .logo a,
.sidebar ul li a,
.docs-toggle a,
.mobile-toggle a {
  color: var(--menulink);
}

header ul li a,
.sidebar a {

  &:before {
    height: 0;
    background-color: unset;
  }

  &:hover {
    color: var(--menulink-hover);
  }
}

header .logo a {
  font-size: 2.6rem;
  margin-top: -1px;
}

.theme-switch {
  width: 2.2rem;
  height: 2.2rem;
  a {
    position: relative;
    &.dark {
      transform: scaleX(-1);
      top: -3px;
      right: -3px;
    }
    &.light {
      right: -2px;
    }
    &:hover {
      color: var(--icon-hover);
      transition: 0.2s ease-in-out;
    }
  }
}

.docs-toggle a {
  position: relative;
  top: 2px;

  &.dark {
    top: -1px;
    right: -4px;
  }
}

nav.sidebar {
  top: 0rem;
  bottom: 0;
  left: 0;
  width: 18%;
  padding: 10.6rem 0.6rem 2rem 2.8%;
  border-right: 1px dotted var(--border-light-dotted);
  transition: border var(--transition-duration) ease;

  > h5 {
    margin-bottom: 0.8rem;

    > a {
      font-weight: 600;
      text-transform: uppercase;
      font-size: 1.5rem;
      color: var(--menutitle);
    }
  }
}

nav.sidebar a:hover:before,
.desktop-menu a:hover:before {
  content: "";
  width: 100%;
  height: 1px;
  background-color: #aaa;
  position: absolute;
  bottom: 3px;
}

nav.sidebar ul.sub-links {
  padding-left: 3.8%;
  margin-bottom: 2rem;
  font-size: 90%;
  margin-top: -0.6rem;
}

nav.sidebar {

  ul.sub-links > ul.sub-links {
    font-size: 100%;
    margin-top: unset;
  }

  a.active-link {
    font-weight: bold;
    color: var(--active-link);
  }
}

nav.mobile-menu {
  left: -50rem
}

.transition {
  background: var(--transition); 

  &.vanish {
    animation: vanish var(transition-duration);
    animation-fill-mode: forwards; 
  }
}

.border-top-light {
  border-top: 1px solid var(--border-light-solid);
  transition: var(--transition-duration) ease;
}

article h1,
article h2 {
  letter-spacing: -1px;
}

article h3,
article h4 {
  letter-spacing: -0.5px;
}

article h1 {
  color: var(--title);
}

article p {
  line-height: 3rem;

  &.p-ico {
    display: inline;
    width: 1.8rem;
    height: 1.8rem;
    transform: translate(0, 0.2rem);
  }
  &.note {
    padding: 1.6rem 1rem 1.6rem 2rem;
    background: var(--note-bg);
    border-radius: 1rem;
    border-left: 4px solid var(--note-border);
    font-size: 1.6rem;
    line-height: 2.6rem;
    transition: background var(--transition-duration) ease;
  }
}

article.demo {
  padding-left: 20%;

  p.intro {
    font-size: 2.2rem;
    line-height: 3.4rem;
    margin-bottom: 4.2rem;
  }

  p.caption {
    font-size: 1.5rem;
    line-height: 2.2rem;
    margin: 1.6rem 0 3rem;
    padding-bottom: 1.4rem;
    border-bottom: 1px dotted #bbb;
  }

  .column > p,
  [class*="column-"] > p {
    border-radius: 6px;
    padding: 2.2rem 0.5rem;
    background-color: #79518b;
    color: #fff;
    font-size: 1.6rem;
    text-align: center;
    margin-bottom: 0;
  }

  .form-example {
    color: #000;
    background: var(--light-bg);

    a {
      color: #66008d;
    }
  }

  .two-columns p,
  .three-columns p,
  .four-columns p,
  .normal-text p {
    background: inherit;
    text-align: initial;
    padding: 0;
    margin-bottom: 2.2rem;
    color: #000;
  }

  .circle {
    max-width: 17%;
    margin: 4rem 0 5rem;
  }

  pre {
    position: relative;

    .filename:before {
      content: attr(data-file);
      position: absolute;
      font-size: 1.2rem;
      top: 1.6rem;
      right: 1.6rem;
      text-align: right;
      color: #ffe590;
      padding: 1rem 0.6rem;
      border-radius: 0.4rem;
      background: #16083f;
    }

    pre > code {
      border-radius: 1rem;
      background-color: var(--code-bg);
    }
  }
}

code.loc {
  background: var(--bg-darker);
  color: #000;
}

p > code,
li > code,
small > code,
table td > code,
table th > code {
  color: var(--font-light);
  background: var(--inline-code-bg);
  transition: all var(--transition-duration) ease;
}

table {
  color: var(--font);

  td > code,
  th > code {
    font-size: 90%;
  }

  thead tr th, 
  tbody tr td {
    border-bottom: 1px solid var(--border-light-solid);
  }
}

.sublink {
  /* scroll-margin: 10rem; awaiting fix for Safari */
  position: relative;
  top: -10rem;
}

footer {
  background: #000;
  padding: 0 0 8rem;
  position: relative;
  flex-shrink: 0;

  p a {
    color: #cfcfcf;
    font-size: 1.6rem;
    border-bottom: 1px solid transparent;
  }

  p a:hover {
    color: #fff;
    border-bottom: 1px dotted #666;
  }

}


/* Tomorrow Night Blue Theme for highlight.js */
/* http://jmblog.github.com/color-themes-for-google-code-highlightjs */
/* Original theme - https://github.com/chriskempson/tomorrow-theme */
/* http://jmblog.github.com/color-themes-for-google-code-highlightjs */

/* Tomorrow Comment */
.hljs-comment,
.hljs-quote {
  color: #7b72a1;
}

/* Tomorrow Red */
.hljs-variable,
.hljs-template-variable,
.hljs-tag,
.hljs-name,
.hljs-selector-id,
.hljs-selector-class,
.hljs-regexp,
.hljs-deletion {
  color: #ff95b0;
}

/* Tomorrow Orange */
.hljs-number,
.hljs-built_in,
.hljs-builtin-name,
.hljs-literal,
.hljs-type,
.hljs-params,
.hljs-meta,
.hljs-link {
  color: #ffc58f;
}

/* Tomorrow Yellow */
.hljs-attribute {
  color: #ffeead;
}

/* Tomorrow Green */
.hljs-string,
.hljs-symbol,
.hljs-bullet,
.hljs-addition {
  color: #f1ffac;
}

/* Tomorrow Blue */
.hljs-title,
.hljs-section {
  color: #bbdaff;
}

/* Tomorrow Purple */
.hljs-keyword,
.hljs-selector-tag {
  color: #ebbbff;
}

.hljs-emphasis {
  font-style: italic;
}

.hljs-strong {
  font-weight: bold;
}

@media (max-width: 1100px) {
  nav.sidebar {
    padding: 10.6rem 0.6rem 2rem 0.8%;
  }
}

@media (max-width: 900px) {
  nav.sidebar {
    padding: 10.6rem 0.6rem 2rem 2.2%;
    width: 22%;
  }
  article.demo {
    padding-left: 23%;
  }
}

@media (max-width: 800px) {
  nav.sidebar {
    height: 100vh;
    width: 53%;
    z-index: 9;
    border-right: 1px solid var(--menu-border);
    background: var(--bg);
    padding: 6% 1% 1% 6%;
    left: -50rem;
    transition: var(--transition-duration) ease;
    box-shadow: 0px 0px 8px #00000030;
  }

  nav.sidebar h5 {
    font-size: 1.8rem;
    margin-bottom: 0.4rem;
  }

  nav.sidebar ul.sub-links {
    margin-top: unset;
  }

  nav.sidebar ul li a {
    line-height: 3rem;
  }

  nav.sidebar.show {
    left: -0.6rem;
  }

  nav.mobile-menu {
    padding-top: 7rem !important;
  }

 .docs-toggle {
    display: block;
  }

  .sublink {
    top: -8rem;
  }

  .close-x {
    display: block;
    font-size: 4rem;
    position: sticky;
    right: 17px;
    margin-top: -2rem;
    position: absolute;
    top: 34px;
    opacity: 0.5;
  }

  .desktop-menu {
    display: none;
  }

  .mobile-top-menu {
    display: flex;
  }

  article.demo {
    padding-left: initial;
  }

  article.demo h2 {
    padding: 7rem 0 0;
  }

  footer p {
    text-align: center;
  }
}

@media (max-width: 769px) {
  article.demo {
    padding-left: unset;
  }
  nav.sidebar {
    padding: 4.6rem 0.6rem 2rem 8%;
  }
}

@media (max-width: 600px) {
  nav.sidebar {
    width: 70%;
  }
}

